@@ -6,13 +6,13 @@ NC103A.CBL    102  102    0       0       0 OK
 NC104A.CBL    141  141    0       0       0 OK
 NC105A.CBL    132  129    0       3       0 OK
 NC106A.CBL    126  126    0       0       0 OK
-NC107A.CBL    177  172    0       0       5 OK
+NC107A.CBL    177  177    0       0       0 OK
 NC108M.CBL     14   14    0       0       0 OK
 NC109M.CBL     11   11    0       0       0 OK
 NC110M.CBL      1    1    0       0       0 OK
 NC111A.CBL      7    7    0       0       0 OK
 NC112A.CBL     32   32    0       0       0 OK
-NC113M.CBL     15    0    0       0      15 OK
+NC113M.CBL     15   15    0       0       0 OK
 NC114M.CBL      6    5    0       0       1 OK
 NC115A.CBL     31   31    0       0       0 OK
 NC116A.CBL     66   66    0       0       0 OK
@@ -20,7 +20,7 @@ NC117A.CBL     40   40    0       0       0 OK
 NC118A.CBL     29   29    0       0       0 OK
 NC119A.CBL     36   36    0       0       0 OK
 NC120A.CBL     39   39    0       0       0 OK
-NC121M.CBL     41   39    0       0       2 OK
+NC121M.CBL     41   41    0       0       0 OK
 NC122A.CBL     24   24    0       0       0 OK
 NC123A.CBL     34   34    0       0       0 OK
 NC124A.CBL    169  169    0       0       0 OK
@@ -31,7 +31,7 @@ NC131A.CBL     10   10    0       0       0 OK
 NC132A.CBL     25   25    0       0       0 OK
 NC133A.CBL     25   25    0       0       0 OK
 NC134A.CBL     20   20    0       0       0 OK
-NC135A.CBL      8    7    0       0       1 OK
+NC135A.CBL      8    8    0       0       0 OK
 NC136A.CBL      8    8    0       0       0 OK
 NC137A.CBL      8    8    0       0       0 OK
 NC138A.CBL     36   36    0       0       0 OK
@@ -63,7 +63,7 @@ NC216A.CBL     57   57    0       0       0 OK
 NC217A.CBL     82   82    0       0       0 OK
 NC218A.CBL    125  125    0       0       0 OK
 NC219A.CBL      9    9    0       0       0 OK
-NC220M.CBL     25   23    0       0       2 OK
+NC220M.CBL     25   25    0       0       0 OK
 NC221A.CBL     17   17    0       0       0 OK
 NC222A.CBL      8    8    0       0       0 OK
 NC223A.CBL     94   94    0       0       0 OK
@@ -96,7 +96,7 @@ NC302M.CBL      0    0    0       0       0 OK
 NC303M.CBL      0    0    0       0       0 OK
 NC401M.CBL      0    0    0       0       0 OK
 --------    ----- ---- ---- ------- -------
-Total        4398 4368    0       4      26
+Total        4398 4393    0       4       1
 
 Number of programs:    95
 Successfully executed: 95
