@@ -1,7 +1,7 @@
 ------ Directory Information -------   --- Total Tests Information ---
 Module Programs Executed Error Crash   Pass Fail Deleted Inspect Total
 ------ -------- -------- ----- -----  ----- ---- ------- ------- -----
-NC           95       95     0     0   4368    0       4      26  4398
+NC           95       95     0     0   4393    0       4       1  4398
 SM           17       17     0     0    291    0       2       1   294
 IC           25       25     0     0    246    0       4       0   250
 SQ           85       85     0     0    518    0       0      89   607
@@ -13,4 +13,4 @@ OB            7        7     0     0     39    0       0       0    39
 IF           45       45     0     0    733    0       0       0   733
 DB           16       16     0     0    404    0       4      27   435
 ------ -------- -------- ----- -----  ----- ---- ------- ------- -----
-Total       420      420     0     0   9531    0      20     143  9694
+Total       420      420     0     0   9556    0      20     118  9694
